fix img height on mobile

--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -7,6 +7,7 @@
     div.rest-img img {
       object-fit: cover;
       width: 100%;
+      height: 300px;
     }
     section.rest-title {
       @include restTitle;
